--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,6 @@
 <resources>
     <string name="app_name">AudioRecorder</string>
-    <string name="menu_prefs">Prefs</string>
-    <string name="menu_reboot">Reboot</string>
-    <string name="menu_screenshot">Screenshot</string>
-    <string name="menu_test_i2c">Atest_i2cudio</string>
+    <string name="menu_prefs">Preferencias</string>
+    <string name="menu_reboot">Reinicio</string>
+    <string name="menu_screenshot">Capturas</string>
 </resources>
